# modernSearchEngines

./: README.md  pyproject.toml  requirements.txt
data/: seeds.txt
data/crawler_state/: failed.json  frontier.json  visited.json
data/index/: docs.json
data/processed/: documents.jsonl  sample_documents.jsonl
organisation/: apis.py  coding_convention.md  meeting12_07.md
report/: REPORT_OUTLINE.md
src/tuebingen_search/: __init__.py  batch.py  bm25.py  crawler.py  indexer.py  language_filter.py  ndcg.py  reranker.py  search.py  text.py  ui_app.py  url_utils.py
src/tuebingen_search_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_batch_format.py  test_tokenizer.py
